--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,1 @@
-# Dependencies
-node_modules/
-
-# Environment variables
-.env
-.env.local
-.env.*.local
-
-# Build output
-dist/
-build/
-
-# Logs
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# Editor files
-.vscode/
-.idea/
+node_modules
